--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,9 @@
-html, * {
-  width: 100%;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h1 {
-  text-align: center;
-  font-size: 2rem;
+html {
+  background-color: #434343;
 }
